Solve problem with example spacing #225

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -465,11 +465,6 @@ $wai_grey: #333333;
     }
     .color-alone {
       figure {
-        @include mq($large) {
-          &.question {
-            margin-bottom: 0;
-          }
-        }
         svg {
           @include mq($small) {
             float: left;
